@@ -5,6 +5,6 @@ includedir=@includedir@
 
 Name: @PACKAGE@
 Description: Abstract interface for robot dynamics
-Requires: @MAL_REQD@
+Requires: 
 Version: @VERSION@
 Cflags: -I${includedir}
