@@ -12,8 +12,6 @@
 #ifndef JRL_JOINT_H
 #define JRL_JOINT_H
 
-#include "MatrixAbstractLayer/MatrixAbstractLayer.h"
-
 #include <vector>
 #include "jrlRigidAcceleration.h"
 #include "jrlRigidVelocity.h"
