@@ -1,4 +1,5 @@
-$Id: ChangeLog 2007/11/08 17:08:48 mallet $
+2007/11/24
+	Moved dependence to MatrixAbstractionLayer to implementation.
 	
 jrl-dynamics version 1.7 released November 8, 2007
 
